--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,6 @@
 
 # Gradle
 .idea/**/gradle.xml
-.idea/**/libraries
-
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
@@ -61,5 +59,6 @@ fabric.properties
 .idea/httpRequests
 
 .idea/
-/.idea
-rabbitmq-spring/.mvn
+.mvn/
+mvnw
+mvnw.cmd
