--- a/rabbitmq-springboot-producer/pom.xml
+++ b/rabbitmq-springboot-producer/pom.xml
@@ -10,18 +10,10 @@
     </parent>
 
 
-    <!--<parent>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
-        <!--<version>2.1.3.RELEASE</version>-->
-        <!--<relativePath/>-->
-    <!--</parent>-->
-
-
     <groupId>com.yanghx</groupId>
-    <artifactId>rabbitmq-spring</artifactId>
+    <artifactId>rabbitmq-springboot-producer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rabbitmq-spring</name>
+    <name>rabbitmq-springboot-producer</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -37,27 +29,26 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>3.6.5</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
