--- a/rabbitmq-springboot-producer/src/main/resources/application.properties
+++ b/rabbitmq-springboot-producer/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.rabbitmq.connection-timeout=15000
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
+server.port=8081
