spring cloud stream  发送消息。接受消息

--- a/rabbitmq-springcloutstream-producer/src/main/resources/application.properties
+++ b/rabbitmq-springcloutstream-producer/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8083
+server.context-path=/producer
+spring.cloud.stream.bindings.output_channel.destination=exchange-3
+## group 就是队列。 spring cloud stream 会解析成  【exchange3.queue-3】的形式
+spring.cloud.stream.bindings.output_channel.group=queue-3
+spring.cloud.stream.bindings.output_channel.binder=rabbit_cluster
+###
+###
+###
+spring.cloud.stream.binders.rabbit_cluster.type=rabbit
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.addresses=132.232.33.80:5672
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.username=guest
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.password=guest
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.virtual-host=/
