--- a/rabbitmq-springcloudstream-consumer/src/main/resources/application.properties
+++ b/rabbitmq-springcloudstream-consumer/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 server.port=8084
+server.context-path=/consumer
+spring.application.name=consumer
+spring.cloud.stream.bindings.input_channel.destination=exchange-3
+## group 就是队列。 spring cloud stream 会解析成  【exchange3.queue-3】的形式
+spring.cloud.stream.bindings.input_channel.group=queue-3
+spring.cloud.stream.bindings.input_channel.binder=rabbit_cluster
+spring.cloud.stream.bindings.input_channel.consumer.concurrency=1
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.requeue-rejected=false
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.acknowledge-mode=MANUAL
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.recovery-interval=3000
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.durable-subscription=true
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.max-concurrency=5
+###
+###
+###
+spring.cloud.stream.binders.rabbit_cluster.type=rabbit
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.addresses=132.232.33.80:5672
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.username=guest
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.password=guest
+spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.virtual-host=/
